cargo-features = ["default-run"]

[package]
name = "advent"
version = "2018.7.0"
authors = ["Mike Cooper <mythmon@gmail.com>"]
edition = "2018"
default-run = "advent"
build = "build.rs" # LALRPOP preprocessing

[build-dependencies]
lalrpop = "^0.16"

[dependencies]
rand = "^0.3.18"
regex = "^1"
lazy_static = "^1.0.0"
colored = "^1.6.1"
indoc = "^0.2"
rayon = "^1.0.3"
clap = "^2.32.0"
reqwest = "^0.9.5"
itertools = "^0.7.11"
lalrpop-util = "^0.16"
petgraph = "^0.4"

# Most of the running is in release mode, to make puzzles go fast. So turn on
# some niceties that debug mode includes.
[profile.release]
incremental = true
overflow-checks = true

[[bin]]
name = "advent"
path = "src/bin.rs"