# cargo-features = ["default-run"]

[package]
name = "advent"
version = "2018.12.0"
authors = ["Mike Cooper <mythmon@gmail.com>"]
edition = "2018"
# default-run = "advent"
build = "build.rs" # LALRPOP preprocessing

[build-dependencies]
lalrpop = "^0.17.0"

[dependencies]
rand = "^0.6.5"
regex = "^1.1.6"
lazy_static = "^1.3.0"
colored = "^1.8.0"
indoc = "^0.3.3"
rayon = "^1.0.3"
clap = "^2.33.0"
reqwest = "^0.9.17"
itertools = "^0.8.0"
lalrpop-util = "^0.17.0"
petgraph = "^0.4"
md5 = "0.6.1"
hex = "0.3.2"

# Most of the running is in release mode, to make puzzles go fast. So turn on
# some niceties that debug mode includes.
[profile.release]
incremental = true
overflow-checks = true

[[bin]]
name = "advent"
path = "src/bin.rs"