# cargo-features = ["default-run"]

[package]
name = "advent"
version = "2019.1.0"
authors = ["Mike Cooper <mythmon@gmail.com>"]
edition = "2018"

[dependencies]
# Puzzle groups
advent-lib = { path = "./advent-lib" }
year2015 = { path = "./year2015" }
year2017 = { path = "./year2017" }
year2018 = { path = "./year2018" }
year2019 = { path = "./year2019" }

# Runner dependencies
colored = "^1.8.0"
reqwest = "^0.9.17"
structopt = "^0.3.5"
num-format = "^0.4.0"

# Most of the running is in release mode, to make puzzles go fast. So turn on
# some niceties that debug mode includes.
[profile.release]
incremental = true
overflow-checks = true

[[bin]]
name = "advent"
path = "src/bin.rs"

[workspace]
members = [".", "advent-lib", "year*"]
