[package]
name = "year2015"
version = "0.4.0"
authors = ["Mike Cooper <mythmon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent-lib = { path = "../advent-lib" }
md5 = "^0.6.1"
rayon = "^1.5.0"
hex = "^0.3.2"
