[package]
name = "year2017"
version = "0.1.0"
authors = ["Mike Cooper <mythmon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent-lib = { path = "../advent-lib" }
lazy_static = "^1.3.0"
regex = "^1.1.6"
indoc = "^0.3.3"
