[package]
name = "year2018"
version = "0.1.0"
authors = ["Mike Cooper <mythmon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "^0.17.0"

[dependencies]
advent-lib = { path = "../advent-lib" }
itertools = "^0.8.0"
lalrpop-util = "^0.17.0"
petgraph = "^0.4"
regex = "^1.1.6"
lazy_static = "^1.3.0"
indoc = "^0.3.3"
rayon = "^1.0.3"
