[package]
name = "year2019"
version = "0.1.0"
authors = ["Mike Cooper <mythmon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent-lib = { path = "../advent-lib" }
itertools = "^0.8.0"
petgraph = "^0.4"
indoc = "^0.3"
