[package]
name = "year2020"
version = "0.1.0"
authors = ["Mike Cooper <mythmon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent-lib = { path = "../advent-lib" }
indoc = "1.0.3"
regex = "1.4.2"
rayon = "1.5.0"
itertools = "0.9.0"
lalrpop = "0.19.1"
